Fix bio text alignment

--- a/src/common.module.css
+++ b/src/common.module.css
@@ -22,6 +22,7 @@
     color: var(--text);
     font-size: 1.5rem;
     max-width: 700px;
+    text-align: center;
 }
 
 .footer{
